@@ -42,16 +42,22 @@
 
 <h4><i>Latest Release: 
 <a href="https://sourceforge.net/project/shownotes.php?release_id=238526">
-alpha-004</a>, 15 May 2004</i></h4>
+alpha-005</a>, 30 May 2004</i></h4>
 
 <ul>
-<li> Progress bar gets scribbled in.
-<li> File chooser (borrowed entirely from <tt>MetalFileChooserUI</tt>, as the
-     <tt>BasicFileChooserUI</tt> class seems entirely inadaquate).
-<li> Text areas are a normal size.
-<li> Paint background on each individual component, so changes to contents
-     don't overlay on each other.
-<li> Much better about switching to/from Napkin LAF.
+<li> <b>Note:</b> This LaF will not work under Java 1.3.  There were many
+     changes in the LaF infrastructure and I can't figure out a way to do
+     one development for both versions.
+<li> Put SwingSet2 source in the swingset jar file.
+<li> No longer need "switch and back" to make demo work.  (This was a bug in
+     SwingSet2.)
+<li> Get titled borders working.
+<li> Separators.
+<li> Set all the properties to use drawn borders.
+<li> Wrap all borders in a simple thing that at least anti-aliases all the
+     the stuff.
+<li> Indeterminate progress bar.
+<li> Split panes.
 </ul>
 
 <hr>
@@ -119,8 +125,9 @@ screen snapshots:
 </center>
 
 <h2>Development</h2>
-I currently have a basic background model and many of the most basic
-components working.
+I currently have a basic background model and most of the most basic
+components working.  Still need to work on uninstall and icons and generally
+cleaning up, but I think I'm getting towards beta finally.
 <p/>
 I welcome anyone to contribute -- thoughts, code, understanding, chocolate...
 
